--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <body>
         <h1>Introduction</h1>
         <ul>
-            <li>Hi! My name is <i>khoi</i>. I'm a secondary school student and i living around the earth (Vietnam).</li>
-            <li>I passionate about coding, listening to music, photo/lomography, exploring tech stuffs, manga/anime.</li>
-            <li>Before i used to addicted to lots of game, But now I understand that I need to work hard and set goals for my life to become the best I can be.</li>
-            <li>I'm a very neat person, i'm very friendly so if you need help i will help you with all of my capacity.</li>
-            <li>I love japanese culture and interested in japanese style.</li>
+            <li>Hi! My name is <i>khoi</i>(real name) but you can also call me zein/zeic. I'm a secondary school student and i was born in Vietnam (proud of that).</li>
+            <li>I like coding, learning code, making game(old hobby), studying, photography, anime/manga, tech stuffs, make everything clean (weird hobby), drawing, listening to music.</li>
+            <li>As i said im from/born in vietnam but i can also use english 24/7 (40% english 1k).</li>
+            <li>I listen to all genres of music, but mostly pop music, motivation, bad/good mood, relax, beat, instrumental, ...</li>
+            <li>I dont have exactly style, i just make everything i wear basic and simple.</li>
         </ul>
 
         <h1>Where you can find me ?</h1>
-        <p>Some of services that i often use </p>
+        <p>Contact me :</p>
         <ul>
-            <li>My email address is <i>Khoibread@gmail.com</i> </a></li>
-            <li>My Discord username is <code>hardzeic</code></li>
+            <li>My email address : <code></code>Khoibread@gmail.com</code>(work only)</li>
+            <li>My discord : <code>hardzeic</code></li>
+            <li></li>
         </ul>
         <p>I'm also available on these platforms:</p>
         <ul>
