--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
         <h1>Where you can find me ?</h1>
         <p>Contact me :</p>
         <ul>
-            <li>My email address : <code></code>Khoibread@gmail.com</code>(work only)</li>
+            <li>My email address : <code>Khoibread@gmail.com(work only)</code></li>
             <li>My discord : <code>hardzeic</code></li>
-            <li></li>
         </ul>
         <p>I'm also available on these platforms:</p>
         <ul>
+            <li><a href="https://github.com/zein240px/">github</a>: to work on my personal projects</li>
+            <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
+        </ul>
+        <p>Social media i often use:</p>
             <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a></li>
             <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a></li>
             <li><a href="https://x.com/Dkhoi09">X</a></li>
-            <li><a href="https://github.com/zein240px/">github</a>: to host my personal projects</li>
-            <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
-        </ul>
+            <li>p/s:please refrain from adding me if you don't plan on interacting with me. I'll only accept if you do or you are/want to be mutuals or serious-work related.</li>
 
-        <h1>Interests</h1>
+        <h1>Interests:</h1>
         <ul>
             <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
             <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
@@ -43,10 +44,10 @@
         <h1>Stuffs I use:</h1>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR4, 459GB, Window)</li>
-            <li><b>Phone</b>: IPhone Xs Max (to surfing the internets, do miscellaneous things, programme code, debloated)</li>
-            <li><b>IEM</b>: Kz EDX Lite (Im not modded for my IEM causse im not professional)</li>
-            <li><b>Mice</b>: ATK F1 Pro max (im not a professional so im not do anything with my mouse)</li>
-            <li><b>Keyboard</b>: Irok nd63 (already lubbed, foam, mod tape, i try to use lots of switchs , random japanese keycap set)</li>
+            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, exploring stuff, ...)</li>
+            <li><b>IEM</b>: Kz EDX Lite (not mod)</li>
+            <li><b>Mice</b>: ATK F1 Pro max ()</li>
+            <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, mod tape, random keycap)</li>
         </ul>
 
         <h1>Inspirations/Motivation:</h1>
