--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a></li>
             <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a></li>
             <li><a href="https://x.com/Dkhoi09">X</a></li>
-            <li>p/s:please refrain from adding me if you don't plan on interacting with me. I'll only accept if you do or you are/want to be mutuals or serious-work related.</li>
+            <li>please refrain from adding me if you don't plan on interacting with me. I'll only accept if you do or you are/want to be mutuals or serious-work related.</li>
 
         <h1>Interests:</h1>
         <ul>
@@ -48,6 +48,13 @@
             <li><b>IEM</b>: Kz EDX Lite (not mod)</li>
             <li><b>Mice</b>: ATK F1 Pro max ()</li>
             <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, mod tape, random keycap)</li>
+        </ul>
+
+        <h1>Future stuffs:</h1>
+        <ul>
+            <li><b>IEM</b>: Truthear Gate(maybe mod)</li>
+            <li><b>Mice</b>: Vance Akitsu (maybe i will try weight reduction)</li>
+            <li><b>Keyboard</b>: PCB Venom60 HE, Tofu60 Redux Case(Anodized Black), Random keycap set, Cherry Clip-In Stabilizers, ...</li>
         </ul>
 
         <h1>Inspirations/Motivation:</h1>
