--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
             <li><a href="https://www.youtube.com/@mameeewin">mameeewin</a></li>
             <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
+            <li><a href="https://www.youtube.com/@jspark8">jspark</a></li>
         </ul>
 
     </body>
