--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </ul>
         <p>I'm also available on these platforms:</p>
         <ul>
-            <li><a href="https://github.com/zein240px/">github</a>: to work on my personal projects</li>
+            <li><a href="https://github.com/zein240px/">github</a>: to work/create website also projects</li>
+            <li><a href="https://codeberg.org/hardzeic">codeberg</a>: to create/host my personal project
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
         </ul>
         <p>Social media i often use:</p>
