--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
             <li><a href="https://youtube.com/@jvscholz">jvscholz</a></li>
             <li><a href="https://www.youtube.com/@markdarwin">markdarwin</a></li>
             <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
-            <li><a href="https://www.youtube.com/@mameeewin">mameeewin</a></li>
             <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
             <li><a href="https://www.youtube.com/@jspark8">jspark</a></li>
+
+        <h1>Coding</h1>
+            <li><a href="https://www.youtube.com/@beyondfireship">beyondfireship<a/></li>
+            <li><a href="https://www.youtube.com/@Fireship">Fireship<a/></li>
+            <li><a href="https://www.youtube.com/@mameeewin">mameeewin<a/></li>
         </ul>
 
     </body>
