--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
         </ul>
 
         <h1>Where you can find me ?</h1>
-        <p>Contact me :</p>
+        <p>Contact me with these services below:</p>
         <ul>
             <li>My email address : <code>Khoibread@gmail.com(work only)</code></li>
-            <li>My discord : <code>hardzeic</code></li>
+            <li>My discord username : <code>hardzeic</code></li>
         </ul>
         <p>I'm also available on these platforms:</p>
         <ul>
             <li><a href="https://github.com/zein240px/">github</a>: to work/create website also projects</li>
             <li><a href="https://codeberg.org/hardzeic">codeberg</a>: to create/host my personal project
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
+            <li><a href="https://myanimelist.net/topanime.php#">MyAnimeList</a>: to track/rate my anime/manga list</li>
         </ul>
         <p>Social media i often use:</p>
-            <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a></li>
-            <li><a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a></li>
-            <li><a href="https://x.com/Dkhoi09">X</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a> ~ <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a> ~ <a href="https://x.com/Dkhoi09">X</a></li>
             <li>please refrain from adding me if you don't plan on interacting with me. I'll only accept if you do or you are/want to be mutuals or serious-work related.</li>
 
         <h1>Interests:</h1>
@@ -39,37 +38,41 @@
             <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
             <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
             <li><b>Games</b>: osu!, Valorant, Counter Strike, Apex legend, ...</li>
-            <li><b>Other</b>:  ... </li>
+            <li><b>Other</b>: Making projects, linux learning, ...</li>
         </ul>
 
-        <h1>Stuffs I use:</h1>
+        <h1>Stuffs I use/My EDC:</h1>
         <ul>
-            <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR4, 459GB, Window)</li>
+            <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
             <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, exploring stuff, ...)</li>
             <li><b>IEM</b>: Kz EDX Lite (not mod)</li>
-            <li><b>Mice</b>: ATK F1 Pro max ()</li>
-            <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, mod tape, random keycap)</li>
+            <li><b>Mice</b>: ATK F1 Pro max </li>
+            <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, tape, default keycap)</li>
         </ul>
 
         <h1>Future stuffs:</h1>
         <ul>
-            <li><b>IEM</b>: Truthear Gate(maybe mod)</li>
-            <li><b>Mice</b>: Vance Akitsu (maybe i will try weight reduction)</li>
-            <li><b>Keyboard</b>: PCB Venom60 HE, Tofu60 Redux Case(Anodized Black), Random keycap set, Cherry Clip-In Stabilizers, ...</li>
+            <li><b>IEM</b>: Truthear Gate(probably will mod)</li>
+            <li><b>Mice</b>: Vance Akitsu, Ippi float 88, WLMOUSE Beast x, Hitscan Hyperlight (so far)</li>
+            <li><b>Keyboard</b>: PCB Venom60 HE, Tofu60 Redux Case(Anodized Black), Cherry Clip-In Stabilizers, Random keycap set (lube, tape, foam)</li>
         </ul>
 
-        <h1>Inspirations/Motivation:</h1>
+        <h1>Inspirations/Motivation</h1>
         <ul>
             <li><a href="https://youtube.com/@jvscholz">jvscholz</a></li>
             <li><a href="https://www.youtube.com/@markdarwin">markdarwin</a></li>
             <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
             <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
-            <li><a href="https://www.youtube.com/@jspark8">jspark</a></li>
+            <li><a href="https://www.youtube.com/@jkwonnn/videos">jkwonnn</a></li>
+            <li><a href="https://www.youtube.com/@tyson.liberto/videos">tysonliberto</a></li>
+            <li><a href="https://www.youtube.com/@shotbywang/videos">Leo</a></li>
 
-        <h1>Coding</h1>
+        <h1>Coding/build ideas</h1>
             <li><a href="https://www.youtube.com/@beyondfireship">beyondfireship<a/></li>
             <li><a href="https://www.youtube.com/@Fireship">Fireship<a/></li>
             <li><a href="https://www.youtube.com/@mameeewin">mameeewin<a/></li>
+            <li><a href="https://www.youtube.com/@Ionic1k/videos">Ionic1k<a/></li>
+ 
         </ul>
 
     </body>
