--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li>Hi! My name is <i>khoi</i>(real name) but you can also call me zein/zeic. I'm a secondary school student and i was born in Vietnam (proud of that).</li>
             <li>I like coding, learning code, making game(old hobby), studying, photography, anime/manga, tech stuffs, make everything clean (weird hobby), drawing, listening to music.</li>
-            <li>As i said im from/born in vietnam but i can also use english 24/7 (40% english 1k).</li>
+            <li>As i said im from/born in vietnam but i can also use english 24/7 .</li>
             <li>I listen to all genres of music, but mostly pop music, motivation, bad/good mood, relax, beat, instrumental, ...</li>
         </ul>
 
