--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Introduction</h1>
         <ul>
-            <li>Hi! My name is <i>khoi</i>(real name) but you can also call me zein/zeic. I'm a secondary school student and i was born in Vietnam (proud of that).</li>
-            <li>I like coding, learning code, making game(old hobby), studying, photography, anime/manga, tech stuffs, make everything clean (weird hobby), drawing, listening to music.</li>
-            <li>As i said im from/born in vietnam but i can also use english 24/7 .</li>
-            <li>I listen to all genres of music, but mostly pop music, motivation, bad/good mood, relax, beat, instrumental, ...</li>
+            <li>My name is <i>Khoi</i> but you can also call me zein/zeic. I'm a secondary school student.</li>
+            <li></li>
+            <li>Im originally from Vietnam, and I use English as my primary language for communication and learning.</li>
+            <li>I listen to all genres of music, but mostly indie, instrumental, chill rock, deep focus</li>
         </ul>
 
         <h1>Where you can find me ?</h1>
@@ -23,21 +23,16 @@
         </ul>
         <p>I'm also available on these platforms:</p>
         <ul>
-            <li><a href="https://github.com/zein240px/">github</a>: to work/create website also projects</li>
-            <li><a href="https://codeberg.org/hardzeic">codeberg</a>: to create/host my personal project
+            <li><a href="https://github.com/zein240px/">github</a>: focus</li>
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
             <li><a href="https://myanimelist.net/topanime.php#">MyAnimeList</a>: to track/rate my anime/manga list</li>
         </ul>
-        <p>Social media i often use:</p>
-            <li><a href="https://www.facebook.com/profile.php?id=100092310412433">Facebook</a> ~ <a href="https://www.reddit.com/user/Ok_Lengthiness_9580/">Reddit</a> ~ <a href="https://x.com/Dkhoi09">X</a></li>
-            <li>please refrain from adding me if you don't plan on interacting with me. I'll only accept if you do or you are/want to be mutuals or serious-work related.</li>
 
         <h1>Interests:</h1>
         <ul>
-            <li><b>Music</b>: Arctic Monkeys, Hisohka, Lil peep, Tyler the Creator, BAANDIT!, Keshi, Bioneunal, love.nicotine, playboi carti, Yoasobi, ... </li>
-            <li><b>Anime</b>: A Silent Voice, Bleach, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
-            <li><b>Games</b>: osu!, Valorant, Counter Strike, Apex legend, ...</li>
-            <li><b>Other</b>: Making projects, linux learning, ...</li>
+            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo... </li>
+            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion,...</li>
+            <li><b>Games</b>: Valorant, Counter strike, Apex legend,...</li>
         </ul>
 
         <h1>Stuffs I use/My EDC:</h1>
@@ -66,13 +61,6 @@
             <li><a href="https://www.youtube.com/@tyson.liberto/videos">tysonliberto</a></li>
             <li><a href="https://www.youtube.com/@shotbywang/videos">Leo</a></li>
 
-        <h1>Coding/build ideas</h1>
-            <li><a href="https://www.youtube.com/@beyondfireship">beyondfireship<a/></li>
-            <li><a href="https://www.youtube.com/@Fireship">Fireship<a/></li>
-            <li><a href="https://www.youtube.com/@mameeewin">mameeewin<a/></li>
-            <li><a href="https://www.youtube.com/@Ionic1k/videos">Ionic1k<a/></li>
- 
-        </ul>
 
     </body>
 </html>
