--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Introduction</h1>
         <ul>
             <li>My name is <i>Khoi</i> but you can also call me zein/zeic. I'm a secondary school student.</li>
-            <li></li>
+            <li>Im passionate about coding and continuous learning</li>
             <li>Im originally from Vietnam, and I use English as my primary language for communication and learning.</li>
             <li>I listen to all genres of music, but mostly indie, instrumental, chill rock, deep focus</li>
         </ul>
