--- a/index.html
+++ b/index.html
@@ -16,39 +16,37 @@
         </ul>
 
         <h1>Where you can find me ?</h1>
-        <p>Contact me with these services below:</p>
+        <p>Contact me with these services below</p>
         <ul>
-            <li>My email address : <code>Khoibread@gmail.com(work only)</code></li>
-            <li>My discord username : <code>hardzeic</code></li>
+            <li>My email address : <code>Khoibread@gmail.com</code>(work only)</li>
+            <li>My discord username : 14yzeici</li>
         </ul>
-        <p>I'm also available on these platforms:</p>
+        <p>I'm also available on these platforms</p>
         <ul>
-            <li><a href="https://github.com/zein240px/">github</a>: focus</li>
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
             <li><a href="https://myanimelist.net/topanime.php#">MyAnimeList</a>: to track/rate my anime/manga list</li>
         </ul>
 
         <h1>Interests:</h1>
         <ul>
-            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo... </li>
-            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion,...</li>
-            <li><b>Games</b>: Valorant, Counter strike, Apex legend,...</li>
+            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo, ...</li>
+            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
+            <li><b>Games</b>: Valorant, Counter strike, Apex legend, ...</li>
         </ul>
 
         <h1>Stuffs I use/My EDC:</h1>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
-            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, exploring stuff, ...)</li>
-            <li><b>IEM</b>: Kz EDX Lite (not mod)</li>
-            <li><b>Mice</b>: ATK F1 Pro max </li>
-            <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, tape, default keycap)</li>
+            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, also use to study)</li>
+            <li><b>IEM</b>: Kz EDX Lite Super-linear Dynamic Driver Unit In-Ear Monitor</li>
+            <li><b>Mice</b>: ATK Blazing Sky F1 Series</li>
+            <li><b>Keyboard</b>: Irok nd63 </li>
         </ul>
 
         <h1>Future stuffs:</h1>
         <ul>
-            <li><b>IEM</b>: Truthear Gate(probably will mod)</li>
-            <li><b>Mice</b>: Vance Akitsu, Ippi float 88, WLMOUSE Beast x, Hitscan Hyperlight (so far)</li>
-            <li><b>Keyboard</b>: PCB Venom60 HE, Tofu60 Redux Case(Anodized Black), Cherry Clip-In Stabilizers, Random keycap set (lube, tape, foam)</li>
+            <li><b>IEM</b>: TRUTHEAR GATE In-ear Monitor</li>
+            <li><b>Keyboard</b>: Aurora Input Series 65 </li>
         </ul>
 
         <h1>Inspirations/Motivation</h1>
@@ -59,8 +57,6 @@
             <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
             <li><a href="https://www.youtube.com/@jkwonnn/videos">jkwonnn</a></li>
             <li><a href="https://www.youtube.com/@tyson.liberto/videos">tysonliberto</a></li>
-            <li><a href="https://www.youtube.com/@shotbywang/videos">Leo</a></li>
-
 
     </body>
 </html>
