--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </ul>
         <h2>inspiration ~ <a href="https://youtube.com/@jvscholz">jvscholz</a></h2>
         <ul>
+    <img scr="https://i.pinimg.com/736x/6e/42/44/6e42449b9e3d5433e4fed658e1b09f8e.jpg">
 
     </body>
 </html>
-![Image](https://github.com/user-attachments/assets/ebce9f78-a283-40a4-b4de-44c477881594)
+
