--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Introduction</h1>
+        <h2>Introduction</h2>
         <ul>
             <li>My name is <i>Khoi</i> but you can also call me zein/zeic. I'm a secondary school student.</li>
             <li>Im passionate about coding and continuous learning</li>
@@ -15,52 +15,42 @@
             <li>I listen to all genres of music, but mostly indie, instrumental, chill rock, deep focus</li>
         </ul>
 
-        <h1>Where you can find me ?</h1>
-        <p>Contact me with these services below:</p>
+        <h2>Where you can find me ?</h2>
+        <p>Contact me with these services below</p>
         <ul>
-            <li>My email address : <code>Khoibread@gmail.com(work only)</code></li>
-            <li>My discord username : <code>hardzeic</code></li>
+            <li>My email address : <code>Khoibread@gmail.com</code>(work only)</li>
+            <li>My discord username : 14yzeici</li>
         </ul>
-        <p>I'm also available on these platforms:</p>
+        <p>I'm also available on these platforms</p>
         <ul>
-            <li><a href="https://github.com/zeici">github</a>: focus</li>
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
             <li><a href="https://myanimelist.net/topanime.php#">MyAnimeList</a>: to track/rate my anime/manga list</li>
         </ul>
 
-        <h1>Interests:</h1>
+        <h2>Interests:</h2>
         <ul>
-            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo... </li>
-            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion,...</li>
-            <li><b>Games</b>: Valorant, Counter strike, Apex legend,...</li>
+            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo, ...</li>
+            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
+            <li><b>Games</b>: Valorant, Counter strike, Apex legend, ...</li>
         </ul>
 
-        <h1>Stuffs I use/My EDC:</h1>
+        <h2>Stuffs I use/My EDC:</h2>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
-            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, exploring stuff, ...)</li>
-            <li><b>IEM</b>: Kz EDX Lite (not mod)</li>
-            <li><b>Mice</b>: ATK F1 Pro max </li>
-            <li><b>Keyboard</b>: Irok nd63 (lubbed, foam, tape, default keycap)</li>
+            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, also use to study)</li>
+            <li><b>IEM</b>: Kz EDX Lite Super-linear Dynamic Driver Unit In-Ear Monitor</li>
+            <li><b>Mice</b>: ATK Blazing Sky F1 Series</li>
+            <li><b>Keyboard</b>: Irok nd63 </li>
         </ul>
 
-        <h1>Future stuffs:</h1>
+        <h2>Future stuffs:</h2>
         <ul>
-            <li><b>IEM</b>: Truthear Gate(probably will mod)</li>
-            <li><b>Mice</b>: Vance Akitsu, Ippi float 88, WLMOUSE Beast x, Hitscan Hyperlight (so far)</li>
-            <li><b>Keyboard</b>: PCB Venom60 HE, Tofu60 Redux Case(Anodized Black), Cherry Clip-In Stabilizers, Random keycap set (lube, tape, foam)</li>
+            <li><b>IEM</b>: TRUTHEAR GATE In-ear Monitor</li>
+            <li><b>Keyboard</b>: Aurora Input Series 65 </li>
         </ul>
-
-        <h1>Inspirations/Motivation</h1>
+        <h2>inspiration ~ <a href="https://youtube.com/@jvscholz">jvscholz</a></h2>
         <ul>
-            <li><a href="https://youtube.com/@jvscholz">jvscholz</a></li>
-            <li><a href="https://www.youtube.com/@markdarwin">markdarwin</a></li>
-            <li><a href="https://www.youtube.com/@oswinwong/featured">oswinwong</a></li>
-            <li><a href="https://www.youtube.com/@masked_mediator">Masked Mediator</a></li>
-            <li><a href="https://www.youtube.com/@jkwonnn/videos">jkwonnn</a></li>
-            <li><a href="https://www.youtube.com/@tyson.liberto/videos">tysonliberto</a></li>
-            <li><a href="https://www.youtube.com/@shotbywang/videos">Leo</a></li>
-
+    <img scr="https://i.pinimg.com/736x/6e/42/44/6e42449b9e3d5433e4fed658e1b09f8e.jpg">
 
     </body>
 </html>
