--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
             <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, also use to study)</li>
             <li><b>IEM</b>: Kz EDX Lite Super-linear Dynamic Driver Unit In-Ear Monitor</li>
             <li><b>Mice</b>: ATK Blazing Sky F1 Series</li>
-            <li><b>Keyboard</b>: Irok nd63 </li>
         </ul>
 
         <h2>Future stuffs:</h2>
         <ul>
             <li><b>IEM</b>: TRUTHEAR GATE In-ear Monitor</li>
-            <li><b>Keyboard</b>: Aurora Input Series 65 </li>
+            <li><b>Keyboard</b>: <a href="https://oblotzky.industries/pages/aurora-input-series-65">Aurora Input Series 65</a> </li>
         </ul>
         <h2>inspiration ~ <a href="https://youtube.com/@jvscholz">jvscholz</a></h2>
         <ul>
