--- a/index.html
+++ b/index.html
@@ -26,20 +26,13 @@
             <li><a href="https://anilist.co/user/hardzeic/">Anilist</a>: to track my anime/manga list</li>
             <li><a href="https://myanimelist.net/topanime.php#">MyAnimeList</a>: to track/rate my anime/manga list</li>
         </ul>
-
-        <h2>Interests:</h2>
-        <ul>
-            <li><b>Music</b>: Arctic Monkeys, Hisohka, wave to earth, vacations, Lily chou-chou, Keshi, Bioneunal, love.nicotine, Mac DeMarco, TV Girls, Clairo, ...</li>
-            <li><b>Anime</b>: A Silent Voice, Your lie in April, Kuroko, Your Name, Saekano, Berserk, Bocchi the Rock!, Evangelion, ...</li>
-            <li><b>Games</b>: Valorant, Counter strike, Apex legend, ...</li>
         </ul>
 
-        <h2>Stuffs I use/My EDC:</h2>
+        <h2>Stuffs in my bag/My EDC</h2>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
             <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, also use to study)</li>
-            <li><b>IEM</b>: Kz EDX Lite Super-linear Dynamic Driver Unit In-Ear Monitor</li>
-            <li><b>Mice</b>: ATK Blazing Sky F1 Series</li>
+            <li><b>IEM</b>: Tanchjim Bunny, Kz EDX lite</li>
         </ul>
 
         <h2>Future stuffs:</h2>
@@ -49,7 +42,6 @@
         </ul>
         <h2>inspiration ~ <a href="https://youtube.com/@jvscholz">jvscholz</a></h2>
         <ul>
-    <img scr="https://i.pinimg.com/736x/6e/42/44/6e42449b9e3d5433e4fed658e1b09f8e.jpg">
 
     </body>
 </html>
