--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Where you can find me ?</h2>
         <p>Contact me with these services below</p>
         <ul>
-            <li>My email address : <code>Khoibread@gmail.com</code>(work only)</li>
+            <li>My email address : <code>Khoibread@gmail.com</code></li>
             <li>My discord username : 14yzeici</li>
         </ul>
         <p>I'm also available on these platforms</p>
@@ -31,7 +31,7 @@
         <h2>Stuffs in my bag/My EDC</h2>
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
-            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, also use to study)</li>
+            <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, study)</li>
             <li><b>IEM</b>: Tanchjim Bunny, Kz EDX lite</li>
         </ul>
 
