--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
         <ul>
             <li><b>Laptop</b>: MSI Modern 14 B11MOU (i5-1155G7, 16GBR DDR2, 459GB, Window)</li>
             <li><b>Phone</b>: IPhone Xs Max (do miscellaneous things, music, study)</li>
-            <li><b>IEM</b>: Tanchjim Bunny, Kz EDX lite</li>
+            <li><b>IEM</b>: Tanchjim Bunny</li>
         </ul>
 
-        <h2>Future stuffs:</h2>
+        <h2>Wishlist</h2>
         <ul>
-            <li><b>IEM</b>: TRUTHEAR GATE In-ear Monitor</li>
+            <li><b>IEM</b>: Truthear x Crinacle Zero,  Topping Arpegear Hane, ~~Vision Ears EXT~~</li>
             <li><b>Keyboard</b>: <a href="https://oblotzky.industries/pages/aurora-input-series-65">Aurora Input Series 65</a> </li>
         </ul>
-        <h2>inspiration ~ <a href="https://youtube.com/@jvscholz">jvscholz</a></h2>
-        <ul>
-
     </body>
 </html>
