--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <h2>Wishlist</h2>
         <ul>
-            <li><b>IEM</b>: Truthear x Crinacle Zero,  Topping Arpegear Hane, ~~Vision Ears EXT~~</li>
+            <li><b>IEM</b>: Truthear x Crinacle Zero,  Topping Arpegear Hane, <del>Vision Ears EXT</del></li>
             <li><b>Keyboard</b>: <a href="https://oblotzky.industries/pages/aurora-input-series-65">Aurora Input Series 65</a> </li>
         </ul>
     </body>
